--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "joi": "^18.0.0",
     "mysql2": "^3.14.3",
     "node": "^22.18.0",
     "nodemailer": "^7.0.5",
